@@ -375,105 +375,107 @@ See `-let' for a description of the destructuring mechanism."
 (defconst lsp/markup-kind-plain-text "plaintext")
 (defconst lsp/markup-kind-markdown "markdown")
 
-(lsp-interface (JSONResponse (:params :id :method :result) nil)
-               (JSONResponseError (:error) nil)
-               (JSONMessage nil (:params :id :method :result :error))
-               (JSONResult nil (:params :id :method))
-               (JSONNotification (:params :method) nil)
-               (JSONRequest (:params :method) nil)
-               (JSONError (:message :code) (:data))
-               (ProgressParams (:token :value) nil)
-               (Edit (:kind) nil)
-               (WorkDoneProgress (:kind) nil)
-               (WorkDoneProgressBegin  (:kind :title) (:cancellable :message :percentage))
-               (WorkDoneProgressReport  (:kind) (:cancellable :message :percentage))
-               (WorkDoneProgressEnd  (:kind) (:message))
-               (WorkDoneProgressOptions nil (:workDoneProgress))
-               (SemanticTokensOptions (:legend) (:rangeProvider :documentProvider))
-               (SemanticTokensLegend (:tokenTypes :tokenModifiers))
-               (SemanticTokensResult (:resultId) (:data))
-               (SemanticTokensPartialResult nil (:data))
-               (SemanticTokensEdit (:start :deleteCount) (:data))
-               (SemanticTokensDelta (:resultId) (:edits))
-               (SemanticTokensDeltaPartialResult nil (:edits)))
+(eval-and-compile
+  (lsp-interface (JSONResponse (:params :id :method :result) nil)
+                 (JSONResponseError (:error) nil)
+                 (JSONMessage nil (:params :id :method :result :error))
+                 (JSONResult nil (:params :id :method))
+                 (JSONNotification (:params :method) nil)
+                 (JSONRequest (:params :method) nil)
+                 (JSONError (:message :code) (:data))
+                 (ProgressParams (:token :value) nil)
+                 (Edit (:kind) nil)
+                 (WorkDoneProgress (:kind) nil)
+                 (WorkDoneProgressBegin  (:kind :title) (:cancellable :message :percentage))
+                 (WorkDoneProgressReport  (:kind) (:cancellable :message :percentage))
+                 (WorkDoneProgressEnd  (:kind) (:message))
+                 (WorkDoneProgressOptions nil (:workDoneProgress))
+                 (SemanticTokensOptions (:legend) (:rangeProvider :documentProvider))
+                 (SemanticTokensLegend (:tokenTypes :tokenModifiers))
+                 (SemanticTokensResult (:resultId) (:data))
+                 (SemanticTokensPartialResult nil (:data))
+                 (SemanticTokensEdit (:start :deleteCount) (:data))
+                 (SemanticTokensDelta (:resultId) (:edits))
+                 (SemanticTokensDeltaPartialResult nil (:edits)))
 
-(lsp-interface (v1:ProgressParams (:id :title) (:message :percentage :done)))
+  (lsp-interface (v1:ProgressParams (:id :title) (:message :percentage :done))))
 
 (defun dash-expand:&RangeToPoint (key source)
   "Convert the position KEY from SOURCE into a point."
   `(lsp--position-to-point
     (lsp-get ,source ,key)))
 
-(lsp-interface (eslint:StatusParams  (:state) nil)
-               (eslint:OpenESLintDocParams (:url) nil)
-               (eslint:ConfirmExecutionParams (:scope :file :libraryPath) nil))
+(eval-and-compile
+  (lsp-interface (eslint:StatusParams  (:state) nil)
+                 (eslint:OpenESLintDocParams (:url) nil)
+                 (eslint:ConfirmExecutionParams (:scope :file :libraryPath) nil))
 
-(lsp-interface (haxe:ProcessStartNotification (:title) nil))
+  (lsp-interface (haxe:ProcessStartNotification (:title) nil))
 
-(lsp-interface (pwsh:ScriptRegion (:StartLineNumber :EndLineNumber :StartColumnNumber :EndColumnNumber :Text) nil))
+  (lsp-interface (pwsh:ScriptRegion (:StartLineNumber :EndLineNumber :StartColumnNumber :EndColumnNumber :Text) nil))
 
-(lsp-interface (omnisharp:ErrorMessage (:Text :FileName :Line :Column))
-               (omnisharp:ProjectInformationRequest (:FileName))
-               (omnisharp:MsBuildProject (:IsUnitProject :IsExe :Platform :Configuration :IntermediateOutputPath :OutputPath :TargetFrameworks :SourceFiles :TargetFramework :TargetPath :AssemblyName :Path :ProjectGuid))
-               (omnisharp:ProjectInformation (:ScriptProject :MsBuildProject))
-               (omnisharp:CodeStructureRequest (:FileName))
-               (omnisharp:CodeStructureResponse (:Elements))
-               (omnisharp:CodeElement (:Kind :Name :DisplayName :Children :Ranges :Properties))
-               (omnisharp:CodeElementProperties () (:static :accessibility :testMethodName :testFramework))
-               (omnisharp:Range (:Start :End))
-               (omnisharp:RangeList () (:attributes :full :name))
-               (omnisharp:Point (:Line :Column))
-               (omnisharp:RunTestsInClassRequest (:MethodNames :RunSettings :TestFrameworkname :TargetFrameworkVersion :NoBuild :Line :Column :Buffer :FileName))
-               (omnisharp:RunTestResponse (:Results :Pass :Failure :ContextHadNoTests))
-               (omnisharp:TestMessageEvent (:MessageLevel :Message))
-               (omnisharp:DotNetTestResult (:MethodName :Outcome :ErrorMessage :ErrorStackTrace :StandardOutput :StandardError))
-               (omnisharp:MetadataRequest (:AssemblyName :TypeName :ProjectName :VersionNumber :Language))
-               (omnisharp:MetadataResponse (:SourceName :Source)))
+  (lsp-interface (omnisharp:ErrorMessage (:Text :FileName :Line :Column))
+                 (omnisharp:ProjectInformationRequest (:FileName))
+                 (omnisharp:MsBuildProject (:IsUnitProject :IsExe :Platform :Configuration :IntermediateOutputPath :OutputPath :TargetFrameworks :SourceFiles :TargetFramework :TargetPath :AssemblyName :Path :ProjectGuid))
+                 (omnisharp:ProjectInformation (:ScriptProject :MsBuildProject))
+                 (omnisharp:CodeStructureRequest (:FileName))
+                 (omnisharp:CodeStructureResponse (:Elements))
+                 (omnisharp:CodeElement (:Kind :Name :DisplayName :Children :Ranges :Properties))
+                 (omnisharp:CodeElementProperties () (:static :accessibility :testMethodName :testFramework))
+                 (omnisharp:Range (:Start :End))
+                 (omnisharp:RangeList () (:attributes :full :name))
+                 (omnisharp:Point (:Line :Column))
+                 (omnisharp:RunTestsInClassRequest (:MethodNames :RunSettings :TestFrameworkname :TargetFrameworkVersion :NoBuild :Line :Column :Buffer :FileName))
+                 (omnisharp:RunTestResponse (:Results :Pass :Failure :ContextHadNoTests))
+                 (omnisharp:TestMessageEvent (:MessageLevel :Message))
+                 (omnisharp:DotNetTestResult (:MethodName :Outcome :ErrorMessage :ErrorStackTrace :StandardOutput :StandardError))
+                 (omnisharp:MetadataRequest (:AssemblyName :TypeName :ProjectName :VersionNumber :Language))
+                 (omnisharp:MetadataResponse (:SourceName :Source)))
 
-(lsp-interface (csharp-ls:CSharpMetadata (:textDocument))
-               (csharp-ls:CSharpMetadataResponse (:source :projectName :assemblyName :symbolName)))
+  (lsp-interface (csharp-ls:CSharpMetadata (:textDocument))
+                 (csharp-ls:CSharpMetadataResponse (:source :projectName :assemblyName :symbolName)))
 
-(lsp-interface (ocaml-lsp:TypeEnclosingParams (:uri :at :index :verbosity) nil)
-               (ocaml-lsp:TypeEnclosingResult (:index :enclosings :type) nil)
-               (ocaml-lsp:GetDocumentationParams (:textDocument :position :contentFormat) nil))
+  (lsp-interface (ocaml-lsp:TypeEnclosingParams (:uri :at :index :verbosity) nil)
+                 (ocaml-lsp:TypeEnclosingResult (:index :enclosings :type) nil)
+                 (ocaml-lsp:GetDocumentationParams (:textDocument :position :contentFormat) nil))
 
-(lsp-interface (rls:Cmd (:args :binary :env :cwd) nil))
+  (lsp-interface (rls:Cmd (:args :binary :env :cwd) nil))
 
-(lsp-interface (rust-analyzer:AnalyzerStatusParams (:textDocument))
-               (rust-analyzer:SyntaxTreeParams (:textDocument) (:range))
-               (rust-analyzer:ViewHir (:textDocument :position))
-               (rust-analyzer:ViewItemTree (:textDocument))
-               (rust-analyzer:ExpandMacroParams (:textDocument :position) nil)
-               (rust-analyzer:ExpandedMacro (:name :expansion) nil)
-               (rust-analyzer:MatchingBraceParams (:textDocument :positions) nil)
-               (rust-analyzer:OpenCargoTomlParams (:textDocument) nil)
-               (rust-analyzer:OpenExternalDocsParams (:textDocument :position) nil)
-               (rust-analyzer:ResovedCodeActionParams (:id :codeActionParams) nil)
-               (rust-analyzer:JoinLinesParams (:textDocument :ranges) nil)
-               (rust-analyzer:MoveItemParams (:textDocument :range :direction) nil)
-               (rust-analyzer:RunnablesParams (:textDocument) (:position))
-               (rust-analyzer:Runnable (:label :kind :args) (:location))
-               (rust-analyzer:RunnableArgs (:cargoArgs :executableArgs) (:workspaceRoot :expectTest :environment))
-               (rust-analyzer:RelatedTestsParams (:textDocument :position) nil)
-               (rust-analyzer:RelatedTests (:runnable) nil)
-               (rust-analyzer:SsrParams (:query :parseOnly) nil)
-               (rust-analyzer:CommandLink (:title :command) (:arguments :tooltip))
-               (rust-analyzer:CommandLinkGroup (:commands) (:title)))
+  (lsp-interface (rust-analyzer:AnalyzerStatusParams (:textDocument))
+                 (rust-analyzer:SyntaxTreeParams (:textDocument) (:range))
+                 (rust-analyzer:ViewHir (:textDocument :position))
+                 (rust-analyzer:ViewItemTree (:textDocument))
+                 (rust-analyzer:ExpandMacroParams (:textDocument :position) nil)
+                 (rust-analyzer:ExpandedMacro (:name :expansion) nil)
+                 (rust-analyzer:MatchingBraceParams (:textDocument :positions) nil)
+                 (rust-analyzer:OpenCargoTomlParams (:textDocument) nil)
+                 (rust-analyzer:OpenExternalDocsParams (:textDocument :position) nil)
+                 (rust-analyzer:ResovedCodeActionParams (:id :codeActionParams) nil)
+                 (rust-analyzer:JoinLinesParams (:textDocument :ranges) nil)
+                 (rust-analyzer:MoveItemParams (:textDocument :range :direction) nil)
+                 (rust-analyzer:RunnablesParams (:textDocument) (:position))
+                 (rust-analyzer:Runnable (:label :kind :args) (:location))
+                 (rust-analyzer:RunnableArgs (:cargoArgs :executableArgs) (:workspaceRoot :expectTest :environment))
+                 (rust-analyzer:RelatedTestsParams (:textDocument :position) nil)
+                 (rust-analyzer:RelatedTests (:runnable) nil)
+                 (rust-analyzer:SsrParams (:query :parseOnly) nil)
+                 (rust-analyzer:CommandLink (:title :command) (:arguments :tooltip))
+                 (rust-analyzer:CommandLinkGroup (:commands) (:title)))
 
-(lsp-interface (clojure-lsp:TestTreeParams (:uri :tree) nil)
-               (clojure-lsp:TestTreeNode (:name :range :nameRange :kind) (:children))
-               (clojure-lsp:ProjectTreeNode (:name :type) (:nodes :final :id :uri :detail :range)))
+  (lsp-interface (clojure-lsp:TestTreeParams (:uri :tree) nil)
+                 (clojure-lsp:TestTreeNode (:name :range :nameRange :kind) (:children))
+                 (clojure-lsp:ProjectTreeNode (:name :type) (:nodes :final :id :uri :detail :range)))
 
-(lsp-interface (terraform-ls:ModuleCalls (:v :module_calls) nil))
-(lsp-interface (terraform-ls:Module (:name :docs_link :version :source_type :dependent_modules) nil))
-(lsp-interface (terraform-ls:Providers (:v :provider_requirements :installed_providers) nil))
-(lsp-interface (terraform-ls:module.terraform (:v :required_version :discovered_version)))
+  (lsp-interface (terraform-ls:ModuleCalls (:v :module_calls) nil))
+  (lsp-interface (terraform-ls:Module (:name :docs_link :version :source_type :dependent_modules) nil))
+  (lsp-interface (terraform-ls:Providers (:v :provider_requirements :installed_providers) nil))
+  (lsp-interface (terraform-ls:module.terraform (:v :required_version :discovered_version)))
 
-(lsp-interface
- (copilot-ls:SignInInitiateResponse (:status :userCode :verificationUri :expiresIn :interval :user) nil)
- (copilot-ls:SignInConfirmResponse (:status :user))
- (copilot-ls:CheckStatusResponse (:status :user))
- (copilot-ls:McpToolsNotification (:servers)))
+  (lsp-interface
+   (copilot-ls:SignInInitiateResponse (:status :userCode :verificationUri :expiresIn :interval :user) nil)
+   (copilot-ls:SignInConfirmResponse (:status :user))
+   (copilot-ls:CheckStatusResponse (:status :user))
+   (copilot-ls:McpToolsNotification (:servers))))
 
 
 ;; begin autogenerated code
@@ -612,8 +614,9 @@ See `-let' for a description of the destructuring mechanism."
 (defconst lsp/response-error-code-server-error-start 6)
 (defconst lsp/response-error-code-server-error-end 7)
 
-(lsp-interface
- (CallHierarchyCapabilities nil (:dynamicRegistration))
+(eval-and-compile
+  (lsp-interface
+   (CallHierarchyCapabilities nil (:dynamicRegistration))
  (CallHierarchyItem (:kind :name :range :selectionRange :uri) (:detail :tags))
  (ClientCapabilities nil (:experimental :textDocument :workspace))
  (ClientInfo (:name) (:version))
@@ -837,7 +840,7 @@ See `-let' for a description of the destructuring mechanism."
  (InlineCompletionParams (:textDocument :position :context))
  (InlineCompletionContext (:triggerKind))
  (InlineCompletionItem (:insertText) (:filterText :range :command))
- (InlineCompletionList (:items) nil))
+ (InlineCompletionList (:items) nil)))
 
 ;; 3.17
 (defconst lsp/inlay-hint-kind-type-hint 1)
